# Solnexus

./: README.md
nexus-frontend/: next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.build.json
nexus-frontend/public/: solana_ai_nexus.json
nexus-frontend/src/app/: globals.css  layout.tsx  page.tsx
nexus-frontend/src/app/(main)/: layout.tsx
nexus-frontend/src/app/(main)/agents/: page.tsx
nexus-frontend/src/app/(main)/dashboard/: page.tsx
nexus-frontend/src/app/agents/: page.tsx
nexus-frontend/src/app/dashboard/: page.tsx
nexus-frontend/src/app/tasks/: page.tsx
nexus-frontend/src/app/test/: page.tsx
nexus-frontend/src/components/: ClientLayout.tsx  ClientWrapper.tsx  Layout.tsx  WalletProvider.tsx
nexus-frontend/src/components/landing/: cta.tsx  features.tsx  footer.tsx  glow-box.tsx  glow-div.tsx  hero.tsx  navbar.tsx
nexus-frontend/src/components/sidebar/: app-sidebar.tsx
nexus-frontend/src/components/svg/: HeroIllustration.tsx  WaveBackground.tsx
nexus-frontend/src/hooks/: useAnchorClient.ts  useWalletConnection.ts
nexus-frontend/src/images/: images.ts
nexus-frontend/src/types/: solana_ai_nexus.ts
nexus-frontend/src/utils/: anchor-client.ts
solana-ai-nexus/: Anchor.toml  deploy-keypair.json  package.json  program-keypair.json
solana-ai-nexus/programs/solana-ai-nexus/: Cargo.toml
solana-ai-nexus/programs/solana-ai-nexus/src/: contexts.rs  defi.rs  errors.rs  events.rs  lib.rs  marketplace.rs  oracle.rs  state.rs  token.rs
solana-ai-nexus/tests/: solana-ai-nexus.ts
(+4 files in other folders)
