[package]
name = "solana-ai-nexus"
version = "0.1.0"
description = "Solana AI Nexus - A decentralized AI agent orchestration platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ai_nexus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }
